# dev

./: .gitignore  .gitmodules  gaussian_2d.m  gaussian_2d_overlaps.py  gaussians_2.py  maximas.R  vector_intersection.m
c/boost_geometry/: CMakeLists.txt  intersection.cpp
c/boost_graph/: CMakeLists.txt  directed_graph_properties.cpp  directed_graph_simple.cpp  graph_comparison.cpp
c/eigen/: CMakeLists.txt  covariance.cpp  skeleton.cpp  synchrony.cpp
c/fifo/server_client/: Makefile  client.c
c/hdf5/: CMakeLists.txt  FindHDF5.cmake  test_hdf5.cpp
c/mathgl/: CMakeLists.txt  FindMathGL.cmake  Makefile  test001.cpp
c/openmp/: CMakeLists.txt  local_variables.cpp  select_nprocessors.cpp
c/optimization/ipopt/hs071_cpp/: CMakeLists.txt
c/optimization/ipopt/ipopt_example/: a.out
c/optimization/ipopt_example/: CMakeLists.txt  FindIPOPT.cmake  example.cpp
c/optimization/lbfgs/: CMakeLists.txt  liblbfgs_example.cpp
c/others/: Makefile  bresenham_line.cpp
c/rapidxml/: test.cpp
c/simple_qt/: hello.cpp  hello.pro
c/std/: bitset.cpp
c/yaml/: Makefile  config.yaml  read_yaml.cpp
control/: double_integrator.py
cs/hello_world/: Makefile
cs/quickgraph/: 01_example.cs  Makefile
dave/: bninjag_monte_carlo_geometric.m  kalmanfilter_1D.m  recursive_bayesian_estimation_studentdave.m
ecourses/computational_finance/prog/w1/: sbuxPrices.csv  sbuxPrices_raw.csv
ecourses/cs373/: kalman_1.py  loca_1.py
ecourses/danalysis/: isOctave.m  l10_1.m  l11_notes.m  l12_1.m  l13_1.m  l14_1.m  l19_1.m  l19_2.m  l1_1.m  l1_2.m  l22_1.m  l24.m  l27_1.m  l29_1.m  l2_1.m  l3_1.m  nls_example_rhs.m  zoo_rhs.m
ecourses/danalysis/l1/: l1.m  l2.m
ecourses/machine_learning/ex1/: computeCost.m  computeCostMulti.m  ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  ml_login_data.mat
ecourses/machine_learning/ex2/: costFunction.m  costFunctionReg.m  plotData.m  predict.m  sigmoid.m
ecourses/machine_learning/ex3/: ex3_nn.m  lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m
ecourses/machine_learning/ex4/: nnCostFunction.m  randInitializeWeights.m
ecourses/machine_learning/ex5/: learningCurve.m  linearRegCostFunction.m  validationCurve.m
ecourses/scientific_computing/: l04_1.m  l04_shoot.m  l06_1.m  l06_bc_bvp.m  l06_rhs_bvp.m
fourier/: test.m
hmm/: plot_hmm_sampling.py
irl/: domain.py  feature_expectations.py  irl.py  mdp.py  test_irl.py
julia/: gmm_test.jl  iteration_combination_test.jl  jld_test.jl  parallel.jl  point_in_polygon.jl  point_to_line.jl  seaborn.jl  testing_graphs.jl  with_numpy.jl  write_read_json.jl
julia/cxx_example/: ArrayMaker.cpp  Makefile  testing.jl
kalman/: ex1.py  ex2.py  kalman.m  kalman1.py  kalman1Dtest.py  kalman2.py  mykalman.py
octave/: gaussian_process.m  rotate_mesh.m  vector_intersection.m
ode/: g.m  test.m
opencl/01_tutorial/: CMakeLists.txt  Makefile  cll.hpp  cll.py  main.cpp  main.py  vector_add.cl
opencl/02_matrix_mult/: CMakeLists.txt  Makefile  main.cpp  main.py  mmul.cl  mmult.cl
pcl/pclvisualizer/: CMakeLists.txt
phd/: test_unicycle.py  unicycle.py
phd/pursuit_curve/: circle.m  line1.m
python/: 1d_datafit.py  1d_splines.py  2d_curve_fit.py  2d_gaussian_with_angle.py  andrew_curves.py  bezier_curves.py  black_litterman.py  bresenham_line.py  dealer_route_zmq.py  dealer_route_zmq_decoupled.py  dijkstra.py  gaussian_2d_overlaps.py  gaussian_overlaps_formations.py  gaussian_process.py  gaussians_2.py  gradient_test.py  interactive_plot.py  least_squares.py  matplotlib_interactive.py  mingame.py  mingame_continuous.py  mixture_of_gaussians.py  networkx_properties.py  numbers_lenght_10.py  plot_mean_std.py  point_to_line.py  power_law_fit.py  qt_example1.py  random_forest.py  req_route_zmq.py  scatter_3d.py  simple_softmax.py  tangent_to_curve_from_point.py  test_bezier.py  univariate_spline.py
python/cvxopt/: linear.py
python/cython/: setup.py
python/hdf5/: create_compound_h5.py  pandas_hdf5.py  test_hdf5.py
python/pymc/: tutorial_01.py
python/regressions/: linear_regression.py  locally_weighted_regression.py
qt/: .clang_complete  CMakeLists.txt  main.cpp  main.pro  main.py  my_form.h  widget.h  widget_1.py  widget_1.ui
r/: tutorial_01.r
rl/: Q_learning_test.m  qlearning_test.py
rlpy_test/tuto/: ChainContinuous.py  ChainMDPTut.py  ContinuousTut.py  GridMDPTut.py  IncrTabularTut.py  SARSA0.py  eGreedyTut.py  test.py
torch/: first_test.lua  second_test.lua  second_test_cuda.lua
yaml/: read.cpp  read.py  test.yaml  write.cpp  write.py
